--- a/team.html
+++ b/team.html
@@ -248,7 +248,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
               <!-- <div class="caption">
                 <i class="fa fa-chain"></i>
               </div> -->
-              <img src="img/manishsir.jpg" class="img-fluid Faculty-advisor-pic" alt="...">
+              <img src="img/manishsir.JPG" class="img-fluid Faculty-advisor-pic" alt="...">
           </div>
           <h3>Dr. Manish Kumar</h3>
           <p class="desc">Sports Secretary</p>
@@ -390,4 +390,3 @@ License URL: https://creativecommons.org/licenses/by/4.0/
   </body>
 
 </html>
-
