--- a/portals.html
+++ b/portals.html
@@ -193,12 +193,8 @@
                         <h3>Lost And Found Portal</h3>
                         <div class="heading-border-light"></div>
                         <!-- <p>Number one in our priority list is the success of our students, alumni and their employers. We work hard in the name of the success of our alumni – being among the best and holding the high employment rate. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. </p> -->
-                        <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-                            ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
-                            esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-                            sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                        <a href="#">Go to the portal</a>
+                        <p> Lost something!!<br>Don't Worry, We Can Help You Find Your Items.</p>
+                        <a href="https://gymkhana.iiita.ac.in/lost-and-found/">Go to the portal</a>
                     </div>
                 </div>
                 <div class="col-md-6">
@@ -212,7 +208,7 @@
             <div class="row">
                 <div class="col-md-6 ">
                     <div class="story-himg story-himg-middle-u">
-                        <img src="img/placeholder.png" class="img-fluid wow fadeInUp" data-wow-delay="0.1s" alt="">
+                        <img src="img/mess.jpeg" class="img-fluid wow fadeInUp" data-wow-delay="0.1s" alt="">
                     </div>
                 </div>
                 <div class="col-md-6">
@@ -221,11 +217,7 @@
                         <div class="heading-border-light"></div>
                         <!-- <p>Number one in our priority list is the success of our students, alumni and their employers. We work hard in the name of the success of our alumni – being among the best and holding the high employment rate. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. </p>
                         <p> Various versions have evolved over the years, sometimes will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose.</p> -->
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-                            ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
-                            esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-                            sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        <p>Coming soon ...</p>
                         <a href="#">Go to the portal</a>
 
                     </div>
@@ -244,18 +236,14 @@
                         <h3>VH Booking Portal</h3>
                         <div class="heading-border-light"></div>
                         <!-- <p>Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p> -->
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-                            ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
-                            esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-                            sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        <p>Coming soon ...</p>
                         <a href="#">Go to the portal</a>
 
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="story-himg">
-                        <img src="img/vh.jpg" class="img-fluid wow fadeInUp" data-wow-delay="0.1s" alt="">
+                        <img src="img/visitor.jpg" class="img-fluid wow fadeInUp" data-wow-delay="0.1s" alt="">
                     </div>
                 </div>
             </div>
