--- a/portals.html
+++ b/portals.html
@@ -208,7 +208,7 @@
             <div class="row">
                 <div class="col-md-6 ">
                     <div class="story-himg story-himg-middle-u">
-                        <img src="img/mess.jpeg" class="img-fluid wow fadeInUp" data-wow-delay="0.1s" alt="">
+                        <img src="img/messreview.jpg" class="img-fluid wow fadeInUp" data-wow-delay="0.1s" alt="">
                     </div>
                 </div>
                 <div class="col-md-6">
@@ -218,7 +218,7 @@
                         <!-- <p>Number one in our priority list is the success of our students, alumni and their employers. We work hard in the name of the success of our alumni – being among the best and holding the high employment rate. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. </p>
                         <p> Various versions have evolved over the years, sometimes will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose.</p> -->
                         <p>Coming soon ...</p>
-                        <a href="#">Go to the portal</a>
+                        <!--<a href="#">Go to the portal</a>-->
 
                     </div>
                 </div>
@@ -237,13 +237,13 @@
                         <div class="heading-border-light"></div>
                         <!-- <p>Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p> -->
                         <p>Coming soon ...</p>
-                        <a href="#">Go to the portal</a>
+                        <!--<a href="#">Go to the portal</a>-->
 
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="story-himg">
-                        <img src="img/visitor.jpg" class="img-fluid wow fadeInUp" data-wow-delay="0.1s" alt="">
+                        <img src="img/vh.JPG" class="img-fluid wow fadeInUp" data-wow-delay="0.1s" alt="">
                     </div>
                 </div>
             </div>
