Fixes different pages and adds news section

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
             <li class="nav-item">
               <a class="nav-link smooth-scroll" href="portals.html">Portals</a>
             </li>
-            <!-- <li class="nav-item">
+            <li class="nav-item">
                 <a class="nav-link smooth-scroll" href="news.html">News</a>
-            </li> -->
+            </li>
 
 
           </ul>
@@ -297,20 +297,6 @@
           </div>
         </div>
 
-
-        <!-- <div class="col-md-3 col-sm-6 desc-comp-offer wow fadeInUp" data-wow-delay="0.8s">
-        <div class="desc-comp-offer-cont">
-          <div class="thumbnail-blogs">
-              <div class="caption">
-                <i class="fa fa-chain"></i>
-              </div>
-              <img src="img/asmita.jpg" class="img-fluid" alt="...">
-          </div>
-          <h3>Asmita</h3>
-          <p class="desc">Asmita is the annual Sports festival of IIIT Allahabad. </p>
-          <a href="https://asmita.iiita.ac.in/" target="_blank"><i class="fa fa-arrow-circle-o-right"></i> Learn More</a>
-        </div>
-      </div> -->
         <div class="container-fluid">
 
           <div class="row" style="padding: 50px 0">
