--- a/news.html
+++ b/news.html
@@ -78,9 +78,9 @@
                   </div>
                   <img src="img/news/news-1.jpg" class="img-fluid" alt="...">
               </div>
-              <h3>Pricing Strategies for Product</h3>
-              <p class="desc">Gymkhana Structure announced.</p>
-              <a href="#"><i class="fa fa-arrow-circle-o-right"></i> Learn More</a>
+              <h3>Gymkhana 1st meeting notes</h3>
+              <p class="desc">Proposed gymkhana structure.</p>
+              <a href="docs/structure.pdf"><i class="fa fa-arrow-circle-o-right"></i>See the structure</a>
             </div>
           </div>
           <div class="col-md-3 col-sm-6 desc-comp-offer wow fadeInUp" data-wow-delay="0.6s">
@@ -91,9 +91,9 @@
                   </div>
                   <img src="img/news/news-9.jpg" class="img-fluid" alt="...">
               </div>
-              <h3>Design Exhibitions of 2017</h3>
-              <p class="desc">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from Business box. </p>
-              <a href="#"><i class="fa fa-arrow-circle-o-right"></i> Learn More</a>
+              <h3>Gymkhana 2nd meeting notes</h3>
+              <p class="desc"> Formation of various committees and assigning chairperson. </p>
+              <a href="docs/meeting_notes2.pdf"><i class="fa fa-arrow-circle-o-right"></i>See the notes</a>
             </div>
           </div>
           <div class="col-md-3 col-sm-6 desc-comp-offer wow fadeInUp" data-wow-delay="0.8s">
@@ -104,9 +104,9 @@
                   </div>
                   <img src="img/news/news-12.jpeg" class="img-fluid" alt="...">
               </div>
-              <h3>Exciting New Technologies</h3>
-              <p class="desc">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from Business box. </p>
-              <a href="#"><i class="fa fa-arrow-circle-o-right"></i> Learn More</a>
+              <h3>Health Cards</h3>
+              <p class="desc">Students can get their Health Cards from AAA section after submitting required documents.</p>
+              <a href="#"><i class="fa fa-arrow-circle-o-right"></i>Contact: Helth centre committee</a>
             </div>
           </div>
         </div>
