--- a/team.html
+++ b/team.html
@@ -1,10 +1,4 @@
-100<!--
-  author: Boostraptheme
-  author URL: https://boostraptheme.com
-  License: Creative Commons Attribution 4.0 Unported
-  License URL: https://creativecommons.org/licenses/by/4.0/
-  -->
-  
+ 
   <!DOCTYPE html>
   <html lang="en">
   
@@ -12,8 +6,8 @@
   
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-      <meta name="description" content="">
-      <meta name="author" content="">
+      <meta name="description" content="Gymkhana IIITA">
+      <meta name="author" content="Gymkhana">
   
       <title>Gymkhana IIITA | Advisors</title>
       <link rel="shortcut icon" href="img/favicon.ico">
@@ -53,7 +47,7 @@
               <li class="nav-item" ><a class="nav-link smooth-scroll" href="index.html">Home</a></li>
               <li class="nav-item" ><a class="nav-link smooth-scroll" href="team.html">advisors</a></li>
               <li class="nav-item" ><a class="nav-link smooth-scroll" href="portals.html">portals</a></li>
-  
+              <li class="nav-item"><a class="nav-link smooth-scroll" href="news.html">News</a></li>
           </ul>
         </div>
       </div>
@@ -364,7 +358,7 @@
                       <img src="img/glogo-1.png" style="max-width: 100px; max-height: 100px; position: relative; top: -15px;">
                     </div>
                     <div class="col-md-6" style="text-align:center;">
-                      <p style="position: relative; top: 15px;">Website designed and developed by <a href="https://github.com/Ace-Bansal">Ekansh Bansal.</a></p>
+                      <a href="https://geekhaven.iiita.ac.in/WebD">Web Development Wing </a>, <a href="https://geekhaven.iiita.ac.in">GeekHaven.</a></a>
                     </div>
                     <div class="col-md-3" style="text-align:center;">
                       <img src="img/iiitLogo.gif" style="max-width: 100px; max-height: 100px; position: relative; top: -25px;">
