--- a/tender.html
+++ b/tender.html
@@ -56,6 +56,7 @@
               <a class="nav-link smooth-scroll" href="tender.html">Tenders</a>
           </li>
 
+
           </ul>
         </div>
       </div>
@@ -69,7 +70,7 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-3 col-sm-6  desc-comp-offer wow fadeInUp" data-wow-delay="0.2s">
-            <h2>Latest News</h2>
+            <h2>Tenders</h2>
             <div class="heading-border-light"></div>
           </div>
           <div class="col-md-3 col-sm-6 desc-comp-offer wow fadeInUp" data-wow-delay="0.4s">
@@ -78,39 +79,27 @@
                   <div class="caption">
                     <i class="fa fa-chain"></i>
                   </div>
-                  <img src="img/news.jpg" class="img-fluid" alt="...">
+                  <!-- <img src="img/news/news-1.jpg" class="img-fluid" alt="..."> -->
               </div>
-              <h3>Gymkhana 1st meeting notes</h3>
-              <p class="desc">Proposed gymkhana structure.</p>
-              <a href="docs/structure.pdf"><i class="fa fa-arrow-circle-o-right"></i>See the structure</a>
+              <h3>Tender for Tent & Infrastructure</h3>
+              <p class="desc">Last Date to Apply : 28th Sept by 5pm</p>
+              <a href="docs/Tender_for_Tent_and_Infrastructure.pdf"><i class="fa fa-arrow-circle-o-right"></i>See the structure</a>
             </div>
           </div>
-          <div class="col-md-3 col-sm-6 desc-comp-offer wow fadeInUp" data-wow-delay="0.6s">
+          <div class="col-md-3 col-sm-6 desc-comp-offer wow fadeInUp" data-wow-delay="0.4s">
             <div class="desc-comp-offer-cont">
               <div class="thumbnail-blogs">
                   <div class="caption">
                     <i class="fa fa-chain"></i>
                   </div>
-                  <img src="img/news.jpg" class="img-fluid" alt="...">
+                  <!-- <img src="img/news/news-1.jpg" class="img-fluid" alt="..."> -->
               </div>
-              <h3>Gymkhana 2nd meeting notes</h3>
-              <p class="desc"> Formation of various committees and assigning chairperson. </p>
-              <a href="docs/meeting_notes2.pdf"><i class="fa fa-arrow-circle-o-right"></i>See the notes</a>
+              <h3>Tender for Electricity Requirements</h3>
+              <p class="desc">Last Date to Apply : 28th Sept by 5pm</p>
+              <a href="docs/Tender_for_Electricity_Requirements.pdf"><i class="fa fa-arrow-circle-o-right"></i>See the structure</a>
             </div>
           </div>
-          <div class="col-md-3 col-sm-6 desc-comp-offer wow fadeInUp" data-wow-delay="0.8s">
-            <div class="desc-comp-offer-cont">
-              <div class="thumbnail-blogs">
-                  <div class="caption">
-                    <i class="fa fa-chain"></i>
-                  </div>
-                  <img src="img/news.jpg" class="img-fluid" alt="...">
-              </div>
-              <h3>Health Cards</h3>
-              <p class="desc">Students can get their Health Cards from AAA section after submitting required documents.</p>
-              <a href="#"><i class="fa fa-arrow-circle-o-right"></i>Contact: Helth centre committee</a>
-            </div>
-          </div>
+          
         </div>
       </div>
     </section>
