--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
             <li class="nav-item">
                 <a class="nav-link smooth-scroll" href="news.html">News</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link smooth-scroll" href="tender.html">Tenders</a>
+          </li>
 
 
           </ul>
