--- a/team.html
+++ b/team.html
@@ -48,6 +48,7 @@
               <li class="nav-item" ><a class="nav-link smooth-scroll" href="team.html">advisors</a></li>
               <li class="nav-item" ><a class="nav-link smooth-scroll" href="portals.html">portals</a></li>
               <li class="nav-item"><a class="nav-link smooth-scroll" href="news.html">News</a></li>
+              <li class="nav-item"><a class="nav-link smooth-scroll" href="tender.html">Tenders</a></li>
           </ul>
         </div>
       </div>
