--- a/tender.html
+++ b/tender.html
@@ -99,6 +99,19 @@
               <a href="docs/Tender_for_Electricity_Requirements.pdf"><i class="fa fa-arrow-circle-o-right"></i>See the structure</a>
             </div>
           </div>
+          <div class="col-md-3 col-sm-6 desc-comp-offer wow fadeInUp" data-wow-delay="0.4s">
+            <div class="desc-comp-offer-cont">
+              <div class="thumbnail-blogs">
+                  <div class="caption">
+                    <i class="fa fa-chain"></i>
+                  </div>
+                  <!-- <img src="img/news/news-1.jpg" class="img-fluid" alt="..."> -->
+              </div>
+              <h3>Tender for Video, Light & Sound</h3>
+              <p class="desc">Last Date to Apply : 29th Sept by 5pm</p>
+              <a href="docs/Video_Light_and_Sound___Call_for_Tenders.pdf"><i class="fa fa-arrow-circle-o-right"></i>See the structure</a>
+            </div>
+          </div>
           
         </div>
       </div>
